tests/invalid/bad_shift_imm.s
_start:
  lsl r0, r0, 100
  